Springservice2.yaml
apiVersion: v1
kind: Service
metadata:
  name: pockyservice2
spec:
  selector:
    app: pockyservice2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pockyservice2
  template:
    metadata:
      labels:
        app: pockyservice2
    spec:
      containers:
        - name: pockyservice2
          image: wngud1/hoeng:0.4
          ports:
            - containerPort: 8080
